<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1d1f29"
    tools:context=".fragments.ganyu_build_1">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1d1f29"
            tools:context=".fragments.al_build_1_fragment">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_artifacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="#222431"
                app:cardCornerRadius="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="219dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="16dp"
                        android:text="Crit rate from Blizzard Strayer and passive allows you to go for crit dmg rather than crit rate"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/attributes2"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/set_name_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="28dp"
                        android:text="Blizzard Strayer"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/nobless_oblige_icon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/nr_of_set_pieces_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:text="4 Piece"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        app:layout_constraintStart_toEndOf="@+id/nobless_oblige_icon"
                        app:layout_constraintTop_toBottomOf="@+id/set_name_2" />

                    <TextView
                        android:id="@+id/attributes"
                        android:layout_width="180dp"
                        android:layout_height="42dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="24dp"
                        android:gravity="center_vertical"
                        android:text="ATK%"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        app:layout_constraintStart_toEndOf="@+id/timepiece"
                        app:layout_constraintTop_toBottomOf="@+id/nobless_oblige_icon" />

                    <TextView
                        android:id="@+id/attributes2"
                        android:layout_width="198dp"
                        android:layout_height="47dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:gravity="center_vertical"
                        android:text="Crit DMG"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/crown"
                        app:layout_constraintTop_toBottomOf="@+id/attributes3"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/attributes3"
                        android:layout_width="139dp"
                        android:layout_height="41dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="20dp"
                        android:gravity="center_vertical"
                        android:text="Cryo DMG"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        app:layout_constraintStart_toEndOf="@+id/cup"
                        app:layout_constraintTop_toBottomOf="@+id/attributes" />

                    <ImageView
                        android:id="@+id/timepiece"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="24dp"
                        android:contentDescription="@string/hourglass"
                        android:src="@drawable/timepiece"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/nobless_oblige_icon" />

                    <ImageView
                        android:id="@+id/cup"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/cup"
                        android:src="@drawable/cup"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/timepiece" />

                    <ImageView
                        android:id="@+id/crown"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/crown"
                        android:src="@drawable/crown"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cup" />

                    <ImageView
                        android:id="@+id/nobless_oblige_icon"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="20dp"
                        android:contentDescription="@string/noblesseobligeflower"
                        android:src="@drawable/blizzard_strayer"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>